@@ -1,0 +1,30 @@
+<?xml version="1.0"?>
+<doc>
+    <assembly>
+        <name>test-xml-045</name>
+    </assembly>
+    <members>
+        <member name="T:EntryPoint">
+            <summary>
+            <see cref="M:EntryPoint.Create(System.Boolean)"/>
+            <see cref="M:EntryPoint.Define(System.Boolean)"/>
+            <see cref="M:EntryPoint.Undefine(System.Boolean)"/>
+            <see cref="M:EntryPoint.Undefine(System.Boolean)"/>
+            <see cref="M:EntryPoint.Remove"/>
+            <see cref="M:EntryPoint.Destroy(System.Boolean)"/>
+            </summary>
+        </member>
+        <member name="M:EntryPoint.Create(System.Boolean)">
+            dummy comments
+        </member>
+        <member name="M:EntryPoint.Undefine(System.Boolean)">
+            dummy comments
+        </member>
+        <member name="M:EntryPoint.Remove">
+            dummy comments
+        </member>
+        <member name="M:EntryPoint.Destroy(System.Boolean)">
+            dummy comments
+        </member>
+    </members>
+</doc>
