@@ -1,5 +1,11 @@
 2005-11-15  Atsushi Enomoto  <atsushi@ximian.com>
 
+	* doc.cs : (FindDocumentedMember) pass invocation_type as well (to
+	  get expected 'protected' access in CheckValidFamilyAccess()).
+	  Fixed bug #76692.
+
+2005-11-15  Atsushi Enomoto  <atsushi@ximian.com>
+
 	* doc.cs : (GenerateTypeDocComment) Fields could be FixedField.
 	  Fixed bug #76705.  CS1569 was incorrectly commented out.
 
